CREATE TABLE IF NOT EXISTS `Clientes` (
	`id_cliente` INT AUTO_INCREMENT UNIQUE,
	`nombre` VARCHAR(100),
	`telefono` VARCHAR(15),
	`correo` VARCHAR(100),
	PRIMARY KEY(`id_cliente`)
);


CREATE TABLE IF NOT EXISTS `Vendedores` (
	`id_vendedor` INT AUTO_INCREMENT UNIQUE,
	`nombre` VARCHAR(100),
	`telefono` VARCHAR(15),
	`correo` VARCHAR(100),
	PRIMARY KEY(`id_vendedor`)
);


CREATE TABLE IF NOT EXISTS `Productos` (
	`id_producto` INT AUTO_INCREMENT UNIQUE,
	`nombre` VARCHAR(100),
	`descripcion` VARCHAR(255),
	`precio` DECIMAL(10,2),
	`stock` INT,
	PRIMARY KEY(`id_producto`)
);


CREATE TABLE IF NOT EXISTS `Ventas` (
	`id_venta` INT AUTO_INCREMENT UNIQUE,
	`fecha` DATE,
	`id_cliente` INT,
	`id_vendedor` INT,
	PRIMARY KEY(`id_venta`)
);


CREATE TABLE IF NOT EXISTS `DetalleVenta` (
	`id_detalle` INT AUTO_INCREMENT UNIQUE,
	`id_venta` INT,
	`id_producto` INT,
	`cantidad` INT,
	`precio_unitario` DECIMAL(10,2),
	`subtotal` DECIMAL(10,2),
	PRIMARY KEY(`id_detalle`)
);


ALTER TABLE `Ventas`
ADD FOREIGN KEY(`id_cliente`) REFERENCES `Clientes`(`id_cliente`)
ON UPDATE NO ACTION ON DELETE NO ACTION;
ALTER TABLE `Ventas`
ADD FOREIGN KEY(`id_vendedor`) REFERENCES `Vendedores`(`id_vendedor`)
ON UPDATE NO ACTION ON DELETE NO ACTION;
ALTER TABLE `DetalleVenta`
ADD FOREIGN KEY(`id_venta`) REFERENCES `Ventas`(`id_venta`)
ON UPDATE NO ACTION ON DELETE NO ACTION;
ALTER TABLE `DetalleVenta`
ADD FOREIGN KEY(`id_producto`) REFERENCES `Productos`(`id_producto`)
ON UPDATE NO ACTION ON DELETE NO ACTION;